--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,10 @@
 buildscript {
-    ext.kotlin_version = '1.8.10'
+    ext.kotlin_version = '2.1.0'
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.3.2'
