--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,5 +93,6 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "com.github.ghhccghk:HyperFocusApi:1.10"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
