works on my machine!

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,9 @@
-org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.jvm.target.validation.mode = IGNORE
+org.gradle.jvmargs=-Xmx4096m -Xms512m -XX:+UseParallelGC -Dfile.encoding=UTF-8
+org.gradle.workers.max=4
+org.gradle.parallel=true
+org.gradle.caching=true
+# org.gradle.configuration-caealse
+
